--- a/socialnetwork/templates/home.html
+++ b/socialnetwork/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Página inicial</h1>
+<div class="container-sm text-center">
+    <div class="">
 
 
 
