--- a/socialnetwork/templates/index.html
+++ b/socialnetwork/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
-    <div class=""
+<div class="container justify-content-center mr-5">
+    <div class="header justify-content-center flex-md-row">
+        <h1>Olá, Seja bem vindo</h1>
+    </div>
 
 
 
