--- a/prompt_app/templates/base.html
+++ b/prompt_app/templates/base.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!doctype html>
 <html lang="pt-br">
   <head>
@@ -7,23 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FrostBook</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static "style.css" %}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename ='style.css')}}">
 </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-          <img src="{% static "assets/logo.png" %}" alt="logo" width="120" height="30"></a>
+          <img src="{{url_for('static',filename = 'logo.png')}}" alt="logo" width="120" height="30"></a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/home">Inicio</a>
               </li>
-              {% if request.user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="#">Amigos</a>
-              </li>
-              {% endif %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
@@ -48,6 +41,6 @@
       </nav>
     {% block content %}
     {% endblock %}
-    <script type="text/javascript" src="{% static "main.js" %}"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
